sort.basic.bubble.AlgBubbleSort3.scala.error
Compilation error:
AlgBubbleSort3:11: error: not found: value compt
  if (compt == 0 ) {
      ^